--- a/index.html
+++ b/index.html
@@ -32,44 +32,43 @@ function toggleProject(project) {
     </ul>
 </nav>
 <header>
-    <!-- ===================== SECTION ACCUEIL ===================== -->
-<section id="Accueil" class="hero">
-    <div class="hero-content">
+    <section id="Accueil" class="hero">
+        <div class="hero-content">
 
-        <!-- Texte -->
-        <div class="hero-text">
-            <h1>Emile CAMARD</h1>
-                <br>
-            <h2>Étudiant en BUT Informatique</h2>
-    <br>
-            <p class="hero-subtitle">
-                À la recherche d’un stage d’avril à juin 2026 (8–12 semaines)<br>
-                Développement • Systèmes • Gestion de projet
-            </p>
-    <br>
-            <p class="hero-description">
+            <!-- Texte -->
+            <div class="hero-text">
+                <h1 class="hero-name">Emile CAMARD</h1>
+                <h2 class="hero-title">Étudiant en BUT Informatique – Université de Lille</h2>
+
+                <p class="hero-subtitle">
+                    À la recherche d’un <strong>stage d’avril à juin 2026</strong> (8–12 semaines)<br>
+                    Développement • Systèmes • Algorithmique • Gestion de projet
+                </p>
+
+                <p class="hero-description">
                 Étudiant en 2ᵉ année de BUT Informatique à l’Université de Lille, passionné par 
                 le développement logiciel, Linux, l’algorithmique et la gestion de projet.  
                 Curieux, motivé et impliqué, je participe à de nombreux projets Java, SQL, web,
                 et administration système.  
                 Fan de basketball et de jeux de stratégie, j’aime travailler en équipe 
                 et résoudre des problèmes complexes.
-            </p>
-    <br>
-            <div class="hero-buttons">
-                <a href="#Projet" class="btn-primary">Voir mes projets</a>
-                <a href="#contact" class="btn-secondary">Me contacter</a>
+                </p>
+
+                <div class="hero-buttons">
+                    <a href="#Projet" class="btn-primary">Voir mes projets</a>
+                    <a href="#contact" class="btn-secondary">Me contacter</a>
+                </div>
             </div>
-        </div>
 
-        <!-- Photo -->
-        <div class="hero-photo">
-            <img src="IMG/CAMARD portraits iut info-356(1).jpg" alt="Photo Emile Camard">
-        </div>
+            <!-- Photo -->
+            <div class="hero-photo">
+                <img src="IMG/CAMARD portraits iut info-356(1).jpg" alt="Photo Emile Camard">
+            </div>
 
-    </div>
-</section>
+        </div>
+    </section>
 </header>
+
 
     <main>
 
